tests/baselines/reference/constDeclarations-access2.errors.txt
tests/cases/compiler/constDeclarations-access2.ts(5,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
tests/cases/compiler/constDeclarations-access2.ts(6,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
tests/cases/compiler/constDeclarations-access2.ts(7,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
tests/cases/compiler/constDeclarations-access2.ts(8,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
tests/cases/compiler/constDeclarations-access2.ts(9,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
tests/cases/compiler/constDeclarations-access2.ts(10,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
tests/cases/compiler/constDeclarations-access2.ts(11,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
tests/cases/compiler/constDeclarations-access2.ts(12,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
tests/cases/compiler/constDeclarations-access2.ts(13,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
tests/cases/compiler/constDeclarations-access2.ts(14,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
tests/cases/compiler/constDeclarations-access2.ts(15,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
tests/cases/compiler/constDeclarations-access2.ts(16,1): error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
tests/cases/compiler/constDeclarations-access2.ts(18,1): error TS2449: The operand of an increment or decrement operator cannot be a constant or a read-only property.
tests/cases/compiler/constDeclarations-access2.ts(19,1): error TS2449: The operand of an increment or decrement operator cannot be a constant or a read-only property.
tests/cases/compiler/constDeclarations-access2.ts(20,3): error TS2449: The operand of an increment or decrement operator cannot be a constant or a read-only property.
tests/cases/compiler/constDeclarations-access2.ts(21,3): error TS2449: The operand of an increment or decrement operator cannot be a constant or a read-only property.
tests/cases/compiler/constDeclarations-access2.ts(23,3): error TS2449: The operand of an increment or decrement operator cannot be a constant or a read-only property.


==== tests/cases/compiler/constDeclarations-access2.ts (17 errors) ====
    
    const x = 0
    
    // Errors
    x = 1;
    ~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    x += 2;
    ~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    x -= 3;
    ~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    x *= 4;
    ~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    x /= 5;
    ~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    x %= 6;
    ~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    x <<= 7;
    ~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    x >>= 8;
    ~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    x >>>= 9;
    ~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    x &= 10;
    ~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    x |= 11;
    ~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    x ^= 12;
    ~
!!! error TS2450: Left-hand side of assignment expression cannot be a constant or a read-only property.
    
    x++;
    ~
!!! error TS2449: The operand of an increment or decrement operator cannot be a constant or a read-only property.
    x--;
    ~
!!! error TS2449: The operand of an increment or decrement operator cannot be a constant or a read-only property.
    ++x;
      ~
!!! error TS2449: The operand of an increment or decrement operator cannot be a constant or a read-only property.
    --x;
      ~
!!! error TS2449: The operand of an increment or decrement operator cannot be a constant or a read-only property.
    
    ++((x));
      ~~~~~
!!! error TS2449: The operand of an increment or decrement operator cannot be a constant or a read-only property.
    
    // OK
    var a = x + 1;
    
    function f(v: number) { }
    f(x);
    
    if (x) { }
    
    x;
    (x);
    
    -x;
    +x;
    
    x.toString();
    